gap error fixed

--- a/index.scss
+++ b/index.scss
@@ -1264,6 +1264,7 @@ form input {
 
     .degradientSectionParallaxBottom {
         margin-bottom: 16%;
+        height: 50%;
         top: 220px;
     }
 
